fix some bugs, feat bring questions and alternatives, set answers